<resources>
    <string name="app_name">RayPlus</string>
    <string name="app_title">临床试验管理系统</string>
    <string name="input_account">请输入账号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="login">登 录</string>
    <string name="logout">退出登录</string>
    <string name="doctor_name">欢迎您，杨医生</string>
    <string name="edit">编 辑</string>
    <string name="submit">提 交</string>
    <string name="baseline_visit">基线资料</string>
    <string name="treatment_visit">治疗期访视</string>
    <string name="survival_visit">生存期访视</string>
    <string name="project_summary">项目总结</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visit_time">访视时间</string>
    <string name="input_visit_time">请设置</string>
    <string name="sex">性别</string>
    <string name="birthday">出生日期</string>
    <string name="race">人种</string>
    <string name="marital_status">婚姻状况</string>
    <string name="degree">文化程度</string>
    <string name="occupation">职业</string>
    <string name="area">常住地区</string>
    <string name="id_num">身份证号</string>
    <string name="admission_number">住院号</string>
    <string name="patient_phone">患者电话</string>
    <string name="relation_phone">家属电话</string>
    <string name="operation_history">外伤及手术史</string>
    <string name="diseases_history">基础疾病史</string>
    <string name="first_clinical_symptoms">初诊临床症状</string>
    <string name="phymatosis_history">肿瘤病史</string>
    <string name="allergy_history">药物过敏史</string>
    <string name="medication_use_history">药物使用史</string>
    <string name="smoke_history">吸烟史</string>
    <string name="smoke_years">吸烟年数</string>
    <string name="is_quit_smoke">是否戒烟</string>
    <string name="quit_smoke_date">戒烟时间</string>
    <string name="is_relapse_smoke">化疗期间是否吸烟</string>
    <string name="average_cigarette">平均吸烟（支/天）</string>
    <string name="drink_history">饮酒史</string>
    <string name="drink_frequency">饮酒频率</string>
    <string name="drink_capacity">每次饮酒量</string>
    <string name="is_quit_drink">是否戒酒</string>
    <string name="quit_drink_date">戒酒时间</string>
    <string name="is_relapse_drink">化疗期间是否饮酒</string>
    <string name="patient_height">身高(cm)</string>
    <string name="patient_weight">体重(kg)</string>
    <string name="patient_body_area">体表面积（㎡）</string>
    <string name="patient_ECOG_score">ECOG评分</string>
    <string name="without">无</string>
    <string name="exist">有</string>
    <string name="lesion">病灶部位</string>
    <string name="transfer_area">转移部位</string>
    <string name="biopsy_way">活检方式</string>
    <string name="tumor_type">肿瘤病理类型</string>
    <string name="genetic_test_sample">基因检测标本</string>
    <string name="genetic_test_way">基因检测方法</string>
    <string name="genetic_mutation_type">基因突变类型</string>
    <string name="PD_L1_expression">PD-L1表达</string>
    <string name="tumor_mutation_load">肿瘤突变负荷（TMB）</string>
    <string name="microsatellite_instability">微卫星不稳定性（MSI）</string>
    <string name="sampling_date">采样日期</string>
    <string name="blood_routine">血常规及凝血功能</string>
    <string name="clinical_significance">临床意义判定</string>
    <string name="hb">Hb(g/L)</string>
    <string name="rbc_b">RBC_B(×10¹²/L)</string>
    <string name="wbc">WBC(×10^9/L)</string>
    <string name="plt">Plt(×10^9/L)</string>
    <string name="pt_s">PT(S)</string>
    <string name="urine_routine">尿常规</string>
    <string name="blood_biochemistry">血生化</string>
    <string name="tumor_marker">肿瘤标志物</string>
    <string name="investigator_signature">研究者签字</string>
    <string name="investigator_signature_date">日期</string>
    <string name="physical_examination">体格检查</string>
    <string name="body_temperature">体温（℃）</string>
    <string name="breathe">呼吸（次/分）</string>
    <string name="blood_systolic_pressure">血压（mmHg）收缩压</string>
    <string name="blood_diastolic_pressure">血压（mmHg）舒张压</string>
    <string name="heart_rate">心率（次/分）</string>
    <string name="treatment_line">几线治疗</string>
    <string name="first_line_treatment">一线治疗</string>
    <string name="treatment_date">一线治疗开始日期</string>
    <string name="treatment_way">治疗方式</string>
    <string name="treatment_operation">手术（手术部位及方式）</string>
    <string name="radiotherapy">放疗（放疗部位及剂量）</string>
    <string name="chemotherapy">化疗（药名，使用剂量及频率，副作用）</string>
    <string name="targeted_therapy">靶向治疗（药名，使用剂量及频率，副作用）</string>
    <string name="immunotherapy">免疫治疗（药名，使用剂量及频率，副作用）</string>
    <string name="other_therapy">其他治疗（药名，使用剂量及频率，副作用）</string>
    <string name="part">部位</string>
    <string name="way">方法</string>
    <string name="tumor_long_dia">肿瘤长径(cm)</string>
    <string name="tumor_short_dia">肿瘤短径(cm)</string>
    <string name="time">时间</string>
    <string name="physical_sign">症体体征和描述</string>
    <string name="start_date">开始日期</string>
    <string name="exist_status">存在状态</string>
    <string name="therapeutic_evaluation">疗效评价</string>
    <string name="any_adjustment">治疗中用药剂量有无调整</string>
    <string name="treatment_name">治疗名称</string>
    <string name="drug_name">药物名称</string>
    <string name="treatment_start_date">给药/治疗开始日期</string>
    <string name="treatment_end_date">给药/治疗结束日期</string>
    <string name="dose_usage">剂量及用法</string>
    <string name="adverse_event_name">不良事件名称</string>
    <string name="is_serious">是否为严重不良事件</string>
    <string name="toxicity_grading">毒性分级</string>
    <string name="drug_relationship">与药物关系</string>
    <string name="take_measure">采取措施</string>
    <string name="is_drug_treat">是否进行药物治疗</string>
    <string name="return_str">转归</string>
    <string name="return_date">转归日期</string>
    <string name="visit_date">随访日期</string>
    <string name="visit_way">随访方式</string>
    <string name="anti_tumor_treat">是否进行其他抗肿瘤治疗</string>
    <string name="live_status">生存状态</string>
    <string name="death_date">死亡日期</string>
    <string name="death_cause">死亡原因</string>
    <string name="gather_way">OS随访证明文件收集形式</string>
    <string name="confirm_live_date">生存状态确认日期</string>
    <string name="last_contact_date">最后一次联系上并确认患者仍存活的日期</string>
    <string name="is_stop_treat">患者是否已终（中）止本临床研究治疗</string>
    <string name="clinic_terminal">药物治疗依从性及临床终点</string>
    <string name="last_take_medicine_date">末次服用治疗药物日期</string>
    <string name="take_medicine_num">共用药几个疗程</string>
    <string name="stop_treat_cause">患者终（中）止治疗的原因</string>
    <string name="curative_effect_summary_pfs">疗效总结(PFS)</string>
    <string name="curative_effect_summary_os">疗效总结(OS)</string>
    <string name="best_treat">经确认后的最佳客观疗效（参考RECIST1.1）</string>
    <string name="research_center">研究中心</string>
    <string name="patient_name">患者姓名</string>
    <string name="patient_num">患者编号</string>
    <string name="patient_id">患者身份证号</string>
    <string name="patient_group">患者组别</string>
    <string name="patient_sign_date">签署同意书日期</string>
    <string name="patient_enter_group_date">入组日期</string>
    <string name="last_best_treatment">一线治疗最佳疗效</string>
    <string name="last_treatment_growth_date">一线治疗进展时间</string>
    <string name="last_treatment_growth_part">一线治疗进展部位</string>
    <string name="is_biopsy_again">是否再次活检</string>
    <string name="biopsy_pathological_type">活检病理类型</string>
    <string name="end_date">结束日期</string>
    <string name="disappear">消失</string>
    <string name="adjustment_percent">调整为标准剂量的百分比</string>
    <string name="adjustment_reason">调整原因</string>
    <string name="is_server_event">严重不良事件</string>
    <string name="report_date">报告日期</string>
    <string name="report_type">报告类型</string>
    <string name="SAE_diagnose">SAE医学术语（诊断）</string>
    <string name="SAE_state">SAE情况</string>
    <string name="die_time">死亡日期</string>
    <string name="SAE_start_time">SAE发生日期</string>
    <string name="medicine_measure">对试验用药采取的措施</string>
    <string name="SAE_recover">SAE转归</string>
    <string name="SAE_relation">SAE与试验药的关系</string>
    <string name="unlock">解 锁</string>
    <string name="not">否</string>
    <string name="yes">是</string>

    <string-array name="clinical_significance">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>
